[package]
name = "notification_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka ="0.29.0"
oracle = "0.5.6"
rayon = "1.5.3"
tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

